cabal-version:      2.4
name:               hangman-app
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Aaron Prunty
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hangman-app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, mtl, process
    hs-source-dirs:   app
    default-language: Haskell2010
